--- a/HTML/blog-3.html
+++ b/HTML/blog-3.html
@@ -727,14 +727,14 @@
 																</div>
 																<div class="intro_layer" data-animation="fadeInLeft">
 																	<h2 class="text-uppercase">
-																		It Agency
+																		Explicitly
 																	</h2>
 																</div>
 																<div class="intro_layer" data-animation="fadeInLeft">
 																	<p>
-																		<span class="color-main2">Web Design</span>,
-																		<span class="color-main3">Marketing</span> &
-																		<span class="color-main4">Branding</span>
+																		<span class="color-main2">Architecture</span>,
+																		<span class="color-main3">Functional Programming</span> &
+																		<span class="color-main4">Agile Delivery</span>
 																	</p>
 																</div>
 															</div>
