added some content

--- a/HTML/blog-3.html
+++ b/HTML/blog-3.html
@@ -757,12 +757,12 @@
 														<div class="intro_layers_wrapper text-center">
 															<div class="intro_layers">
 																<div class="intro_layer" data-animation="fadeInLeft">
-																	<p class="text-lowercase">Online</p>
+																	<p class="text-lowercase">Agile</p>
 																</div>
 
 																<div class="intro_layer" data-animation="fadeInLeft">
 																	<h2 class="text-uppercase">
-																		Marketing
+																		Software development
 																	</h2>
 																</div>
 																<div class="intro_layer" data-animation="fadeInRight">
@@ -790,11 +790,11 @@
 															<div class="intro_layers">
 																<div class="intro_layer" data-animation="fadeInLeft">
 																	<h3 class="text-uppercase">
-																		<span class="before fw-100">modern</span>
+																		<span class="before fw-100">Clean</span>
 																		<br>
-																		<span class="fw-300 prev"> marketing & design</span>
+																		<span class="fw-300 prev"> Code & Foundational Architecture</span>
 																		<br>
-																		<span class="fw-600">that works</span>
+																		<span class="fw-600">that can be built on for years</span>
 																	</h3>
 																</div>
 															</div>
