--- a/HTML/about.html
+++ b/HTML/about.html
@@ -715,9 +715,9 @@
 								</h5>
 								<i class="rt-icon2-user"></i>
 								<p>
-									Gregory F. Parrino,
+									John Regan,
 									<span class="link-a">
-										<a href="#">CEO</a>
+										<a href="#">Director</a>
 									</span>
 								</p>
 
@@ -913,42 +913,9 @@
 					<!-- eof flexslider -->
 					<div class="flexslider-controls">
 						<ul class="flex-control-nav-1">
-							<li class="menu_item">
-								Letha L. Young
-								<span class="position">Marketer</span>
-								<span class="team-social-icons">
-									<span class="social-icons">
-										<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-										<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-										<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-									</span>
-								</span>
-							</li>
-							<li class="menu_item">
-								Harold D. Cote
-								<span class="position">Developer</span>
-								<span class="team-social-icons">
-									<span class="social-icons">
-										<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-										<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-										<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-									</span>
-								</span>
-							</li>
-							<li class="menu_item">
-								Oren R. Odom
-								<span class="position">Marketer</span>
-								<span class="team-social-icons">
-									<span class="social-icons">
-										<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-										<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-										<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-									</span>
-								</span>
-							</li>
 							<li class="menu_item flex-active">
-								Gregory F. Parrino
-								<span class="position">CEO</span>
+								John Regan
+								<span class="position">Director</span>
 								<span class="team-social-icons">
 									<span class="social-icons">
 										<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
