--- a/HTML/index_static.html
+++ b/HTML/index_static.html
@@ -1130,41 +1130,8 @@
 							<div class="flexslider-controls">
 								<ul class="flex-control-nav-1">
 									<li class="menu_item flex-active">
-										Gregory F. Parrino
+										John Regan
 										<span class="position">CEO</span>
-										<span class="team-social-icons">
-											<span class="social-icons">
-												<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-												<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-												<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-											</span>
-										</span>
-									</li>
-									<li class="menu_item">
-										Letha L. Young
-										<span class="position">Designer</span>
-										<span class="team-social-icons">
-											<span class="social-icons">
-												<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-												<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-												<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-											</span>
-										</span>
-									</li>
-									<li class="menu_item">
-										Harold D. Cote
-										<span class="position">Developer</span>
-										<span class="team-social-icons">
-											<span class="social-icons">
-												<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
-												<a href="#" class="fa fa-twitter color-icon border-icon rounded-icon" title="twitter"></a>
-												<a href="#" class="fa fa-google color-icon border-icon rounded-icon" title="google"></a>
-											</span>
-										</span>
-									</li>
-									<li class="menu_item">
-										Oren R. Odom
-										<span class="position">Marketer</span>
 										<span class="team-social-icons">
 											<span class="social-icons">
 												<a href="#" class="fa fa-facebook color-icon border-icon rounded-icon" title="facebook"></a>
